--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "a11y-gradient",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:Biboswan/a11yGradient.git",
-  "author": "<biboswan98@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "prettier": "^2.2.1"
-  }
+    "name": "a11y-gradient",
+    "version": "1.0.0",
+    "type": "module",
+    "repository": "git@github.com:Biboswan/a11yGradient.git",
+    "author": "<biboswan98@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "start": "webpack --env development",
+        "build": "webpack --env production"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.12",
+        "@babel/plugin-transform-runtime": "^7.19.6",
+        "@babel/preset-env": "^7.20.2",
+        "babel-loader": "^9.1.2",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.3",
+        "mini-css-extract-plugin": "^2.7.2",
+        "prettier": "^2.2.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
+    },
+    "dependencies": {
+        "color-contrast-checker": "^2.1.0"
+    }
 }
