--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,12 @@
         "service_worker": "js/background.bundle.js",
         "type": "module"
     },
+    "web_accessible_resources": [
+        {
+            "resources": ["assets/close.png", "css/content.css"],
+            "matches": ["https://*/*"]
+        }
+    ],
     "devtools_page": "html/devtools.html",
     "permissions": ["tabs", "scripting", "activeTab"],
     "host_permissions": ["<all_urls>"]
