--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "webpack-cli": "^5.0.1"
     },
     "dependencies": {
-        "color-contrast-checker": "^2.1.0"
+        "@fortawesome/fontawesome-free": "^6.2.1",
+        "color-contrast-checker": "^2.1.0",
+        "rgb-hex": "^4.0.0"
     }
 }
