--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "babel-loader": "^9.1.2",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.3",
+        "css-minimizer-webpack-plugin": "^4.2.2",
         "mini-css-extract-plugin": "^2.7.2",
         "prettier": "^2.2.1",
         "webpack": "^5.75.0",
