--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
     "name": "A11y Gradient",
     "description": "Browser devtools checks color contrast between background and text colors. But it is limited to monochromatic colours. A11y Gradient deals with gradients too.",
-    "version": "1.0",
+    "version": "0.1.0",
+    "version_name": "0.1.0-alpha",
     "manifest_version": 3,
     "content_scripts": [
         {
