--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,10 @@
     },
     "web_accessible_resources": [
         {
+            "resources": ["assets/icons/*"],
+            "matches": ["<all_urls>"]
+        },
+        {
             "resources": ["css/content.css"],
             "matches": ["https://*/*"]
         }
